# ausport-fixtures

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ausport/: __init__.py  api.py  cli.py  formatters.py
tests/: __init__.py  test_api.py
tests/fixtures/: afl_games.json  afl_teams.json  nrl_teams.json
