[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ausport-fixtures"
version = "0.1.0"
description = "Australian sports fixtures, results and ladders CLI using public APIs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Phillip", email = "phillza1337@hotmail.com" }]
keywords = ["australia", "sports", "afl", "nrl", "cli", "fixtures"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Sports",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "respx>=0.21",  # for httpx mocking
    "ruff>=0.4",
]

[project.scripts]
ausport = "ausport.cli:main"

[project.urls]
Homepage = "https://github.com/phillza/ausport-fixtures"
Repository = "https://github.com/phillza/ausport-fixtures"
Issues = "https://github.com/phillza/ausport-fixtures/issues"

[tool.setuptools.packages.find]
include = ["ausport*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line too long - too noisy for CLI tool
